[package]
# Note: some of these values are also used when building Debian packages below.
name = "routinator"
version = "0.9.0-dev"
edition = "2018"
authors = ["The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"]
description = "An RPKI relying party software."
repository = "https://github.com/NLnetLabs/routinator"
keywords = ["rpki", "routing-security", "bgp"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"

[dependencies]
bytes           = "1.0.0"
chrono          = "0.4.11"
clap            = "2.33.0"
crossbeam-queue = "0.3.1"
crossbeam-utils = "0.8.1"
dirs            = "3.0.1"
fern            = "0.6.0"
form_urlencoded = "1.0"
futures         = "0.3.4"

# Pin hyper to 0.14.4 for compatibility with Rust 1.45.
hyper           = { version = "=0.14.4", features = [ "server", "stream" ] }

log             = "0.4.8"
log-reroute     = "0.1.5"
num_cpus        = "1.12.0"
rand            = "0.8.1"
reqwest         = { version = "0.11.0", default-features = false, features = ["blocking", "gzip", "rustls-tls" ] }
ring            = "0.16.12"
rpki            = { version = "0.11.0", features = [ "repository", "rrdp", "rtr", "serde" ] }
serde           = { version = "1.0.95", features = [ "derive" ] }
serde_json      = "1.0.57"
sled            = "0.34.6"
tempfile        = "3.1.0"
tokio           = { version = "1.0", features = [ "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "sync" ] }
tokio-stream    = "0.1"
toml            = "0.5.6"
uuid            = "0.8.1"


[target.'cfg(unix)'.dependencies]
nix             = "0.20.0"
syslog          = "5.0.0"

[build-dependencies]
rustc_version   = "0.3.3"

[features]
default = [ "socks", "ui"]
extra-debug = ["rpki/extra-debug"]
socks = [ "reqwest/socks" ]
rta = []
native-tls = [ "reqwest/native-tls", "tls" ]
tls = []
ui = []

[profile.release]
panic = "abort"

[package.metadata.deb]
name = "routinator"
maintainer = "The NLnet Labs RPKI Team <rpki@nlnetlabs.nl>"
license-file = ["LICENSE", "0"]
extended-description = """\
The Resource Public Key Infrastructure provides cryptographically signed \
statements about the association of Internet routing resources. \
In particular, it allows the holder of an IP address prefix to publish which \
AS number will be the origin of BGP route announcements for it. \
Routinator is a RPKI relying party software written in Rust. """
depends = "$auto, passwd, rsync, sudo"
section = "net"
priority = "optional"
assets = [
    ["target/release/routinator", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/routinator/", "644"],
    ["doc/misc.md", "usr/share/doc/routinator/misc.md", "644"],
    ["doc/routinator.1", "usr/share/man/man1/routinator.1", "644"],
    ["etc/routinator.conf.system-service", "etc/routinator/routinator.conf", "644"],
    ["debian/service.preset", "/lib/systemd/system-preset/50-routinator.preset", "644"],
    ["debian/routinator-init", "usr/bin/", "755"]
]
maintainer-scripts = "debian"
changelog = "debian/changelog" # this will be generated by the pkg workflow
copyright = "Copyright (c) 2020, NLnet Labs. All rights reserved."
conf-files = ["/etc/routinator/routinator.conf"]
systemd-units = { unit-name = "routinator", enable = false }

[package.metadata.deb.variants.minimal]

[package.metadata.generate-rpm]
# "BSD" alone is the 3-clause license. Inheriting "license" from above causes rpmlint to
# complain with "invalid-license".
# See: https://fedoraproject.org/wiki/Licensing:Main?rd=Licensing
license = "BSD"
assets = [
    { source = "target/release/routinator", dest = "/usr/bin/routinator", mode = "755" },
    { source = "doc/routinator.1", dest = "/usr/share/man/man1/routinator.1", mode = "644", doc = true },
    { source = "etc/routinator.conf.system-service", dest = "/etc/routinator/routinator.conf", mode = "644", config = true },
    { source = "debian/routinator.routinator.service", dest = "/lib/systemd/system/routinator.service", mode = "644" },
    { source = "debian/service.preset", dest = "/lib/systemd/system-preset/50-routinator.preset", mode = "644" },
    { source = "debian/postinst", dest = "/tmp/krill.postinst", mode = "755" },
    { source = "debian/routinator-init", dest = "/usr/bin/routinator-init", mode = "755" },
]
# Scripts based on https://cgit.freedesktop.org/systemd/systemd/tree/src/core/macros.systemd.in
post_install_script = """
    # ala RPM scriptlet %systemd_post
    if [ $1 -eq 1 ] ; then
        # Initial installation
        useradd --system --home-dir /var/lib/routinator --user-group --create-home routinator
        systemctl preset routinator.service 2>&1 || :
    fi
"""
pre_uninstall_script = """
    # ala RPM scriptlet %systemd_preun
    if [ $1 -eq 0 ] ; then
        # Package removal, not upgrade
        systemctl --no-reload disable routinator.service > /dev/null 2>&1 || :
        systemctl stop routinator.service > /dev/null 2>&1 || :
    fi
"""
post_uninstall_script = """
    # ala RPM scriptlet %systemd_postun_with_restart
    systemctl daemon-reload >/dev/null 2>&1 || :
    if [ $1 -ge 1 ] ; then
        systemctl try-restart routinator.service >/dev/null 2>&1 || :
    fi
"""

[package.metadata.generate-rpm.requires]
shadow-utils = "*"
rsync = "*"
sudo = "*"

